# wealth-tracker

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.MD  docker-compose.yml
config/: default.toml
src/: config.rs  lib.rs
src/category/: service.rs
wealth-tracker/: launch.json
